# kafka-connect-api

./: .gitignore  .pre-commit-config.yaml  .rtd-requirements.txt  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  functions_template.yaml  pyproject.toml  tox.ini
docs/: conf.py  index.rst  install.rst  modules.rst
kafka_connect_api/: __init__.py  aws_lambdas.py  errors.py  functions_template.yaml  kafka_connect_api.py  tools.py
schemas/: cluster_config.json  connector_config.json
tests/: test_kafka_connect_api.py
