[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kafka_connect_api"
version = "0.1.0"
description = "Python Client to interact with Apache Kafka Connect cluster"
authors = ["John Preston <john@compose-x.io>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
placebo = "^0.10.0"
pre-commit = "^2.15.0"
black = "^21.11b1"
sphinx-material = "^0.0.34"
behave = "^1.2.6"
coverage = { extras = ["toml"], version = "^5.5" }
flake8 = "^3.9.2"
pytest = "^6.2.5"
Sphinx = "^4.3.0"
tox = "^3.24.4"
tbump = "6.5.0"
sphinx-jsonschema = "^1.17.1"


[tool.tbump]
github_url = "https://github.com/compose-x/kafka_connect_api"

[tool.tbump.version]
current = "0.1.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "kafka_connect_api/__init__.py"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.coverage.report]
exclude_lines = [
  "if __name__ == '__main__'"
]
[tool.coverage.run]
omit = [
  "*/cli.py"
]
