[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kafka_connect_api"
version = "0.5.2"
description = "Apache Kafka Connect client"
authors = ["John Preston <john@compose-x.io>"]
license = "MPL-2.0"
readme = "README.rst"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
jsonschema = "^4.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
placebo = "^0.10"
pre-commit = "^3.1"
black = "^23.0"
sphinx-material = "^0.0.35"
behave = "^1.2"
coverage = { extras = ["toml"], version = "^7.2" }
pytest = "^7.2"
Sphinx = "^6.0"
tbump = "^6.9"
sphinx-jsonschema = "^1.17"
cleanpy = "^0.4"
pyupgrade = "^3.1"

[tool.poetry.extras]
awslambda = ["jsonschema"]


[tool.poetry.group.dev.dependencies]
sphinx-autodoc-typehints = "^1.19.4"

[tool.tbump]
github_url = "https://github.com/compose-x/kafka_connect_api"

[tool.tbump.version]
current = "0.5.2"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "kafka_connect_api/__init__.py"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == '__main__'"
]
[tool.coverage.run]
omit = [
    "*/cli.py"
]
